[package]
name = "safe-rm-hehe" # Đảm bảo tên này chưa ai đặt trên crates.io
version = "0.1.1"
edition = "2021"
description = "Một công cụ thay thế lệnh rm, giúp đưa file vào thùng rác thay vì xóa vĩnh viễn."
license = "MIT"
repository = "https://github.com/mhfed/safe-rm"
homepage = "https://github.com/mhfed/safe-rm"
readme = "README.md"
keywords = ["rm", "safe", "trash", "cli"]
categories = ["command-line-utilities"]

[dependencies]
# clap: dùng để parse command line arguments
clap = { version = "4.4", features = ["derive"] }
colored = "3.0.0"
# trash: dùng để tương tác với thùng rác của hệ điều hành
trash = "3.1"
